recursion.lessons.recursion.koch.HexaKoch.scala.error
HexaKoch:16: error: not found: value pentaKoch
		pentaKoch(levels-1,length*0.4)
                ^HexaKoch:18: error: not found: value pentaKoch
		pentaKoch(levels-1,length*0.4)
                ^