recursion.lessons.recursion.koch.HexaKoch.scala.code
def drawCurve(levels:Int, length:Double) {
    hexaKoch(levels, length);
}
def hexaKoch(levels:Int, length:Double) {
		if (levels > 0 ) {
		hexaKoch(levels-1,length*0.4)
		left(120);
		hexaKoch(levels-1,length*0.14)
		right(60);
		hexaKoch(levels-1,length*0.14)
		right(60);
		hexaKoch(levels-1,length*0.14)
		right(60);
		hexaKoch(levels-1,length*0.14)
		right(60);
		pentaKoch(levels-1,length*0.4)
		left(120);
		pentaKoch(levels-1,length*0.4)
		} else {
			avance(length);
		}
		
}
